Read more Ndumo half done

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                             <p>The Grade R Project seeks R400,000 to boost early childhood education, with R74,238 raised so far. The funds will enhance resources and facilities, fostering the development of young learners before they enter primary school.</p>
                         </div>
                         <div class="causes-btn">
-                            <a class="btn btn-custom" href="">Learn More</a>
+                            <a class="btn btn-custom" href="grade-r-excellence.html">Read More</a>
                         </div>
                     </div>
                     <div class="causes-item">
@@ -392,7 +392,7 @@
                             <p>The Tshwane Varsity Hackathon has raised R177,990 of its R400,000 goal to empower students through coding experience and networking. The remaining funds will cover event costs and enhance the quality of the participants' experience.</p>
                   </div>
                         <div class="causes-btn">
-                            <a class="btn btn-custom">Learn More</a>
+                            <a class="btn btn-custom" href="hackathon.html">Read More</a>
                         </div>
                     </div>
                     <div class="causes-item">
@@ -417,7 +417,7 @@
                             </p>
                         </div>
                         <div class="causes-btn">
-                            <a class="btn btn-custom">Learn More</a>
+                            <a class="btn btn-custom" href="ndumo-community.html">Read More</a>
                            
                         </div>
                     </div>
