--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
 
                                 <a href="testimonials.html" class="dropdown-item">Testimonials</a>
                                 <a href="gallery.html" class="dropdown-item">Gallery</a>
+                                <a href="#team" class="dropdown-item">Meet the team</a>
                             </div>
                         </div>
-                        <a href="#team" class="nav-item nav-link">Meet the team</a>
                         <a href="#donate" class="nav-item nav-link">Contact Us</a>
                     </div>
                 </div>
