--- a/index.html
+++ b/index.html
@@ -30,39 +30,14 @@
     <body>
         <!-- Top Bar Start -->
         <div class="top-bar d-none d-md-block">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-md-8">
-                        <div class="top-bar-left">
-                            <div class="text">
-                                <i class="fa fa-phone-alt"></i>
-                                <p>+27 81 355 6089</p>
-                            </div>
-                            <div class="text">
-                                <i class="fa fa-envelope"></i>
-                                <p>info@example.com</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="top-bar-right">
-                            <div class="social">
-                                <a href=""><i class="fab fa-twitter"></i></a>
-                                <a href=""><i class="fab fa-facebook-f"></i></a>
-                                <a href=""><i class="fab fa-linkedin-in"></i></a>
-                                <a href=""><i class="fab fa-instagram"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            
         </div>
         <!-- Top Bar End -->
 
         <!-- Nav Bar Start -->
         <div class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid">
-                <a href="index.html" class="navbar-brand">#TWENTYFROM20</a>
+                <img src="img/Picture1.png" class="navbar-brand">
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -366,7 +341,9 @@
                         </div>
                         <div class="causes-text">
                             <h3>Grade R Centre of Excellence</h3>
-                            <p>The Grade R Project seeks R400,000 to boost early childhood education, with R74,238 raised so far. The funds will enhance resources and facilities, fostering the development of young learners before they enter primary school.</p>
+                            <p>
+                                <b>Building Bright Futures:</b> Invest in helping us create a quality early childhood development learning experience for those who need it the most. Join Us  in Shaping the Next Generation Through Quality Education at the Grade R Centre of Excellence!
+                            </p>
                         </div>
                         <div class="causes-btn">
                             <a class="btn btn-custom" href="grade-r-excellence.html">Read More</a>
@@ -389,7 +366,9 @@
                         </div>
                         <div class="causes-text">
                             <h3>Tshwane Varsity Hackathon</h3>
-                            <p>The Tshwane Varsity Hackathon has raised R177,990 of its R400,000 goal to empower students through coding experience and networking. The remaining funds will cover event costs and enhance the quality of the participants' experience.</p>
+                            <p>
+                                <b>Innovate, Collaborate, Elevate:</b> Be Part of the Future through the Intervarsity Hackathon Series. Join Forces with us to Drive Technological Breakthroughs and Shape Tomorrow's Solutions while creating graduates who are future ready!
+                            </p>
                   </div>
                         <div class="causes-btn">
                             <a class="btn btn-custom" href="hackathon.html">Read More</a>
@@ -412,7 +391,8 @@
                         </div>
                         <div class="causes-text">
                             <h3> Ndumo Community Centre</h3>
-                            <p>The Ndumo Community Centre has raised over R213,007 of its R400,000 goal to support essential services like education and health. The remaining funds will enhance facilities and expand services to better support and develop the local community.
+                            <p>
+                                <b>Empower Today, Preserve Tomorrow:</b> Help us to continue providing interactive and practical environmental education to Protect Nature’s Future. Together, We Can Make a Lasting Impact. Support the Ndumo Community Project Now!
 
                             </p>
                         </div>
@@ -440,14 +420,14 @@
                             <img src="img/event-1.jpg" alt="Image">
                             <div class="event-content">
                                 <div class="event-meta">
-                                    <p><i class="fa fa-calendar-alt"></i>23-Sep-2024</p>
+                                    <p><i class="fa fa-calendar-alt"></i>18 - 20 October 2024</p>
                                     <p><i class="far fa-clock"></i>14:30 - 00:00</p>
-                                    <p><i class="fa fa-map-marker-alt"></i>Pretoria</p>
+                                    <p><i class="fa fa-map-marker-alt"></i>TB Hall (TUT Pretoria west Campus)</p>
                                 </div>
                                 <div class="event-text">
                                     <h3>Tshwane Varsity Hackathon</h3>
                                     <p>
-                                        Join us for the Varsity Hackathon on September 23, 2024! The event will run from 2:30 PM to midnight at our Pretoria campus. Don’t miss out on a day of innovation and collaboration!
+                                        Join us for the Tshwane Varsity Hackathon that will run for 3 days at our Pretoria West Campus. Don’t miss out on 53 hours of innovation and collaboration!
                                     </p>
 
                                 </div>
@@ -781,7 +761,6 @@
                             <a href="#donate">Donate</a>
                             <a href="#supported-projects">Supported Projects</a>
                             <a href="#events">Upcoming Events</a>
-
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
