--- a/grade-r-excellence.html
+++ b/grade-r-excellence.html
@@ -30,44 +30,19 @@
 
     <body>
 
-         <!-- Top Bar Start -->
-        <div class="top-bar d-none d-md-block">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-md-8">
-                        <div class="top-bar-left">
-                            <div class="text">
-                                <i class="fa fa-phone-alt"></i>
-                                <p>+27 81 355 6089</p>
-                            </div>
-                            <div class="text">
-                                <i class="fa fa-envelope"></i>
-                                <p>info@example.com</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="top-bar-right">
-                            <div class="social">
-                                <a href=""><i class="fab fa-twitter"></i></a>
-                                <a href=""><i class="fab fa-facebook-f"></i></a>
-                                <a href=""><i class="fab fa-linkedin-in"></i></a>
-                                <a href=""><i class="fab fa-instagram"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <!-- Top Bar Start -->
+            <div class="top-bar d-none d-md-block">
+                
             </div>
-        </div>
-        <!-- Top Bar End -->
-
-        <!-- Nav Bar Start -->
-        <div class="navbar navbar-expand-lg bg-dark navbar-dark">
-            <div class="container-fluid">
-                <a href="index.html" class="navbar-brand">#TWENTYFROM20</a>
-                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+            <!-- Top Bar End -->
+    
+            <!-- Nav Bar Start -->
+            <div class="navbar navbar-expand-lg bg-dark navbar-dark">
+                <div class="container-fluid">
+                    <img src="img/Picture1.png" class="navbar-brand">
+                    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
 
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto">
@@ -132,11 +107,10 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-link">
                             <h2>Popular Links</h2>
-                            <a href="#about">About Us</a>
-                            <a href="#donate">Donate</a>
-                            <a href="#supported-projects">Supported Projects</a>
-                            <a href="#events">Upcoming Events</a>
-
+                            <a href="index.html#about">About Us</a>
+                            <a href="index.html#donate">Donate</a>
+                            <a href="index.html#supported-projects">Supported Projects</a>
+                            <a href="index.html#events">Upcoming Events</a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
