--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                             <div class="event-content">
                                 <div class="event-meta">
                                     <p><i class="fa fa-calendar-alt"></i>18 - 20 October 2024</p>
-                                    <p><i class="far fa-clock"></i>14:30 - 00:00</p>
+                                    <p><i class="far fa-clock"></i>08:00 - 14:00</p>
                                     <p><i class="fa fa-map-marker-alt"></i>TB Hall (TUT Pretoria west Campus)</p>
                                 </div>
                                 <div class="event-text">
@@ -439,14 +439,14 @@
                             <img src="img/event-2.jpg" alt="Image">
                             <div class="event-content">
                                 <div class="event-meta">
-                                    <p><i class="fa fa-calendar-alt"></i>16-Aug-2024</p>
+                                    <p><i class="fa fa-calendar-alt"></i>25 - 29 November 2024</p>
                                     <p><i class="far fa-clock"></i>10:00 - 13:00</p>
-                                    <p><i class="fa fa-map-marker-alt"></i>Soshanguve</p>
+                                    <p><i class="fa fa-map-marker-alt"></i>Ndumo Game Reserve, KZN</p>
                                 </div>
                                 <div class="event-text">
                                     <h3>Ndumo Community Visit</h3>
                                     <p>
-                                        We're excited to announce a visit to the Ndumo Community Centre on August 16, 2024, from 10:30 AM to 2:00 PM. The visit will take place in Soshanguve. We look forward to seeing you there!
+                                        We are pleased to present the Ndumo Community Project, which includes our ePap Distribution and Health Drive. We look forward to seeing you there!
                                     </p>
 
                                 </div>
