--- a/index.html
+++ b/index.html
@@ -534,7 +534,13 @@
                     </div>
                     <div class="col-lg-5">
                         <div class="donate-form">
-                            <form action="https://formsubmit.co/tmatiza19@gmail.com" method="POST">
+                            <form action="https://api.web3forms.com/submit" method="POST">
+                                <div>
+                                    <input type="hidden" name="access_key" value="a503597a-4e1c-4b67-b6c3-73022ceb6c73">
+                                </div>
+                                <div>
+                                    <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
+                                </div>                                
                                 <div class="control-group">
                                     <input type="text" class="form-control" name="Subject" placeholder="Subject" required="required" />
                                 </div>
@@ -550,15 +556,14 @@
                                 <div class="control-group">
                                     <textarea class="form-control1" name="Message" placeholder="Message" required="required"></textarea>
                                 </div>
-                                <div>
-                                    <input type="hidden" name="_autoresponse" value="Thank you for your response our support team will get back to you shortly">
-                                </div>
+                             
                                 <div>
                                     <input type="hidden" name="_template" value="box">
                                 </div>
                                 <div>
-                                    <input type="hidden" name="_next" value="https://icep-dev.github.io/TwentyFrom20/thank-you-page.html">
+                                    <input type="hidden" name="redirect" value="https://icep-dev.github.io/TwentyFrom20/thank-you-page.html">                                    
                                 </div>
+                                <div class="h-captcha" data-captcha="true"></div>
                                 <div>
                                     <button class="btn btn-custom" type="submit">Submit</button>
                                 </div>
@@ -810,5 +815,7 @@
 
         <!-- Template Javascript -->
         <script src="js/main.js"></script>
+        
+        <script src="https://web3forms.com/client/script.js" async defer></script>
     </body>
 </html>
