--- a/hackathon.html
+++ b/hackathon.html
@@ -55,9 +55,10 @@
 
                                 <a href="testimonials.html" class="dropdown-item">Testimonials</a>
                                 <a href="gallery.html" class="dropdown-item">Gallery</a>
+                                <a href="index.html#team" class="dropdown-item">Meet the team</a>
                             </div>
                         </div>
-                        <a href="index.html#team" class="nav-item nav-link">Meet the team</a>
+                        
                         <a href="index.html#donate" class="nav-item nav-link">Contact Us</a>
                     </div>
                 </div>
@@ -70,18 +71,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h2>Read More </h2>
+                    <h2>Hackathon Series </h2>
                 </div>
             </div>
         </div>
     </div>
     <!-- Page Header End -->
 
-
-
-    <h1 style="text-align: center;font-size: 40px;font-family: Lucida Console, Courier New, monospace;">
-        <strong><b>Hackathon Series</b></strong><br><br><br>
-    </h1>
     <div class="image-hackathon" style="float: left; width: 35%; margin-right: 20px;">
         <img src="img/Technical equipment hiring (2).png" alt="hackathon-image" style="width: 100%; margin-left: 170px;">
     </div>
