--- a/ndumo-community.html
+++ b/ndumo-community.html
@@ -55,9 +55,10 @@
 
                                 <a href="testimonials.html" class="dropdown-item">Testimonials</a>
                                 <a href="gallery.html" class="dropdown-item">Gallery</a>
+                                <a href="index.html#team" class="dropdown-item">Meet the team</a>
                             </div>
                         </div>
-                        <a href="index.html#team" class="nav-item nav-link">Meet the team</a>
+                        
                         <a href="index.html#donate" class="nav-item nav-link">Contact Us</a>
                     </div>
                 </div>
