--- a/testimonials.html
+++ b/testimonials.html
@@ -73,7 +73,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h2> Read More</h2>
+                    <h2> Testimonials</h2>
                 </div>
             </div>
         </div>
