I have added animation for scrolling

--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
         <!-- Carousel End -->
 
         <!-- Video Modal Start-->
-        <div class="modal fade" id="videoModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <section id="videoModal">  
+        <div class="modal fade"  tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
@@ -151,10 +152,13 @@
                 </div>
             </div>
         </div> 
+
+    </section>  
         <!-- Video Modal End -->
         
         <!-- About Start -->
-        <div id = "about" class="about">
+         <section  id = "about">
+        <div class="about">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-6">
@@ -198,6 +202,7 @@
                 </div>
             </div>
         </div>
+    </section>
         <!-- About End -->
 
         <!-- Service Start -->
@@ -317,7 +322,8 @@
         <!-- Facts End -->
 
         <!-- Causes Start -->
-        <div id="supported-projects" class="causes">
+    <section id="supported-projects">
+        <div  class="causes">
             <div class="container">
                 <div class="section-header text-center">
                     <p>Supported Projects</p>
@@ -405,10 +411,12 @@
                 </div>
             </div>
         </div>
+    </section>
         <!-- Causes End -->
 
+    <section id="events">
         <!-- Event Start -->
-        <div id="events" class="event">
+        <div  class="event">
             <div class="container">
                 <div class="section-header text-center">
                     <p>Upcoming Events</p>
@@ -457,9 +465,11 @@
             </div>
         </div>
         <!-- Event End -->
+    </section>
 
         <!-- Team Start -->
-        <div id="team" class="team">
+       <section id="team"> 
+        <div  class="team">
             <div class="container">
                 <div class="section-header text-center">
                     <p>Meet The Team</p>
@@ -517,10 +527,12 @@
                 </div>
             </div>
         </div>
+    </section>  
         <!-- Team End -->
 
         <!-- Donate Start -->
-        <div id="donate" class="donate" data-parallax="scroll" data-image-src="img/donate.jpg">
+       <section id="donate"> 
+        <div  class="donate" data-parallax="scroll" data-image-src="img/donate.jpg">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-7">
@@ -573,6 +585,7 @@
                 </div>
             </div>
         </div>
+    </section>  
         <!-- Donate End -->
 
         <!-- Testimonial Start
