Updating vision and mission

--- a/index.html
+++ b/index.html
@@ -166,14 +166,14 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="section-header">
-                            <p>Learn About Us</p>
-                            <h2>We are a <span style="color: red;">non-profit</span> charity organization</h2>
+                            <p>Learn about our mission and Vision statements</p>
+                            <h2>We are <span style="color: red;">TwentyFrom20 Organization</span> That Empower the people</h2>
                         </div>
                         <div class="about-tab">
                             <ul class="nav nav-pills nav-justified">
-                                <li class="nav-item">
+                               <!--<li class="nav-item">
                                     <a class="nav-link active" data-toggle="pill" href="#tab-content-1">About</a>
-                                </li>
+                                </li>-->
                                 <li class="nav-item">
                                     <a class="nav-link" data-toggle="pill" href="#tab-content-2">Mission</a>
                                 </li>
@@ -184,16 +184,16 @@
 
                             <div class="tab-content">
                                 <div id="tab-content-1" class="container tab-pane active" name="about">
-                                    To celebrate its 20th anniversary, the University is launching the #Twentyfrom20 campaign to raise R1.2 million through 60 companies each donating R20,000 for three key projects.
-                                    
+                                    Our <Strong>Mission</Strong> is to advance social and economic transformation through relevant curricula, impactful research and engagement,
+                                     quality learning experience and dedicated staff and providing an enabling environment.​
                                 </div>
                                 <div id="tab-content-2" class="container tab-pane fade" name="vision">
-                                    We advance social and economic transformation through relevant curricula, impactful research and engagement, quality learning 
-                                    experiences, dedicated staff and an enabling environment
+                                    Our <Strong>Mission</Strong> is to advance social and economic transformation through relevant curricula, impactful research and engagement,
+                                     quality learning experience and dedicated staff and providing an enabling environment.​
 
                                 </div>
                                 <div id="tab-content-3" class="container tab-pane fade" name="mission">
-                                    A people’s university that makes knowledge work
+                                    Our <Strong>Vision</Strong> is to be a people’s university that makes knowledge work
 
                                 </div>
                             </div>
@@ -382,7 +382,9 @@
                     </div>
                     <div class="causes-item">
                         <div class="causes-img">
-                            <img src="img/causes-3.jpg" alt="Image">
+                            <img src="img/ndumologo.jpg" alt="image" height="240">
+                            
+                            <!--img src="img/ndumologo.jpg" alt="Image"-->
                         </div>
                         <div class="causes-progress">
                             <div class="progress">
