--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
                         </div>
                         <div class="about-tab">
                             <ul class="nav nav-pills nav-justified">
-                                <li class="nav-item">
+                                <!-- <li class="nav-item">
                                     <a class="nav-link active" data-toggle="pill" href="#tab-content-1">About</a>
-                                </li>
+                                </li> -->
                                 <li class="nav-item">
                                     <a class="nav-link" data-toggle="pill" href="#tab-content-2">Mission</a>
                                 </li>
@@ -184,9 +184,9 @@
 
                             <div class="tab-content">
                                 <div id="tab-content-1" class="container tab-pane active" name="about">
-                                    To celebrate its 20th anniversary, the University is launching the #Twentyfrom20 campaign to raise R1.2 million through 60 companies each donating R20,000 for three key projects.
-                                    
-                                </div>
+                                    We advance social and economic transformation through relevant curricula, impactful research and engagement, quality learning 
+                                    experiences, dedicated staff and an enabling environment
+                                </div> 
                                 <div id="tab-content-2" class="container tab-pane fade" name="vision">
                                     We advance social and economic transformation through relevant curricula, impactful research and engagement, quality learning 
                                     experiences, dedicated staff and an enabling environment
