--- a/grade-r-excellence.html
+++ b/grade-r-excellence.html
@@ -37,7 +37,7 @@
             <!-- Top Bar End -->
     
             <!-- Nav Bar Start -->
-            <div class="navbar navbar-expand-lg bg-dark navbar-dark">
+            <div class="navbar navbar-expand-lg bg-light navbar-light">
                 <div class="container-fluid">
                     <img src="img/Picture1.png" class="navbar-brand">
                     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
