--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
             <div class="container-fluid">
                 <img src="img/Picture1.png" class="navbar-brand">
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-                    <span class="navbar-toggler-icon"></span>
+                    <div class="burger-menu">
+                        <span class="navbar-toggler-icon"></span>
+                    </div>
                 </button>
 
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
@@ -157,7 +159,7 @@
         <!-- Video Modal End -->
         
         <!-- About Start -->
-         <section  id = "about">
+    <section  id = "about" style="padding-top: 60px; margin-top: -60px;">
         <div class="about">
             <div class="container">
                 <div class="row align-items-center">
@@ -322,7 +324,7 @@
         <!-- Facts End -->
 
         <!-- Causes Start -->
-    <section id="supported-projects">
+    <section id="supported-projects" style="padding-top: 80px; margin-top: -50px;">
         <div  class="causes">
             <div class="container">
                 <div class="section-header text-center">
@@ -414,7 +416,7 @@
     </section>
         <!-- Causes End -->
 
-    <section id="events">
+    <section id="events" style="padding-top: 80px; margin-top: -50px;">
         <!-- Event Start -->
         <div  class="event">
             <div class="container">
@@ -468,7 +470,7 @@
     </section>
 
         <!-- Team Start -->
-       <section id="team"> 
+       <section id="team" style="padding-top: 80px; margin-top: -50px;"> 
         <div  class="team">
             <div class="container">
                 <div class="section-header text-center">
@@ -531,7 +533,7 @@
         <!-- Team End -->
 
         <!-- Donate Start -->
-       <section id="donate"> 
+       <section id="donate" style="padding-top: 80px; margin-top: -50px;"> 
         <div  class="donate" data-parallax="scroll" data-image-src="img/donate.jpg">
             <div class="container">
                 <div class="row align-items-center">
