--- a/index.html
+++ b/index.html
@@ -794,12 +794,13 @@
                             <a href="#events">Upcoming Events</a>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6">
+                    <!-- <div class="col-lg-3 col-md-6">
                         <div class="footer-link">
                             <h2>Useful Links</h2>
                             <a href="">FQAs</a>
                         </div>
                     </div>
+                -->
 
                 </div>
             </div>
