--- a/grade-r-excellence.html
+++ b/grade-r-excellence.html
@@ -73,13 +73,32 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h2> Read More</h2>
+                    <h2> Grade R Centre for Excellence </h2>
                 </div>
             </div>
         </div>
     </div>
     <!-- Page Header End -->
 
+
+    <div class="image-grade-r" style="float: left; width: 35%; margin-right: 20px;">
+        <img src="img/Grade-R.png" alt="grade-r-image" style="width: 100%; margin-left: 170px;">
+    </div>
+    <div class="grade-r-container" style="float: right; width: 60%; padding-left: 230px; margin-top: 130px;">
+        <p><i>
+            <i class="fas fa-quote-left" style="font-size: 24px; font-weight: bold;"></i> 
+               The TUT Grade R Centre for Excellence is pioneering Early Childhood Development in South Africa,<br>
+               emphasizing creativity, critical thinking, and problem-solving skills, while fostering cultural preservation and innovation. <br>
+               This state-of-the-art centre will benefit approximately 100,000 learners and 1,000 ECD practitioners,<br>
+               spanning from ECD centres to primary schools. <br>
+                Equipped with classrooms,a toy library, reading rooms, a robotics centre, art and musical rooms, a coding corner,<br>
+                 a climate change room, and a STEM zone, the centre will serve as a hub for interactive and enriched learning experiences.<br>
+                Neighbouring primary school students from Soshanguve and surrounding townships will access the centre's resources,<br>
+                 facilitating holistic educational growth. <i class="fas fa-quote-right" style="font-size: 24px; font-weight: bold;"></i>
+        </i></p>
+    </div>
+    
+    <div style="clear: both;"></div>
 
 
 
