--- a/index.html
+++ b/index.html
@@ -434,7 +434,8 @@
                                 <div class="event-meta">
                                     <p><i class="fa fa-calendar-alt"></i>18 - 20 October 2024</p>
                                     <p><i class="far fa-clock"></i>08:00 - 14:00</p>
-                                    <p><i class="fa fa-map-marker-alt"></i>TB Hall (TUT Pretoria west Campus)</p>
+                                    <p><i class="fa fa-map-marker-alt"></i>TB Hall (TUT<br> 
+                                         Pretoria west Campus)</p>
                                 </div>
                                 <div class="event-text">
                                     <h3>Tshwane Varsity Hackathon</h3>
