--- a/index.html
+++ b/index.html
@@ -780,11 +780,10 @@
                             <p><i class="fa fa-phone-alt"></i>+27 12 382 4755</p>
                             <p><i class="fa fa-envelope"></i>msibipns@tut.ac.za</p>
                             <div class="footer-social">
-                                <a class="btn btn-custom" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-custom" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-custom" href=""><i class="fab fa-youtube"></i></a>
-                                <a class="btn btn-custom" href=""><i class="fab fa-instagram"></i></a>
-                                <a class="btn btn-custom" href=""><i class="fab fa-linkedin-in"></i></a>
+                                <a class="btn btn-custom" href="https://x.com/official_tut"><i class="fab fa-twitter"></i></a>
+                                <a class="btn btn-custom" href="https://www.facebook.com/TUTCommunications"><i class="fab fa-facebook-f"></i></a>
+                                <a class="btn btn-custom" href="https://www.youtube.com/channel/UCD4jxDpRYTarILQjtsEQv9Q?view_as=subscriber"><i class="fab fa-youtube"></i></a>
+                                <a class="btn btn-custom" href="https://www.linkedin.com/school/tshwane-university-of-technology/"><i class="fab fa-linkedin-in"></i></a>
                             </div>
                         </div>
                     </div>
