--- a/testimonials.html
+++ b/testimonials.html
@@ -166,7 +166,7 @@
                         <div class="footer-link">
                             <h2>Popular Links</h2>
                             <a href="index.html#about">About Us</a>
-                            <a href="index.html#donate">Donate</a>
+                            <a href="donationjourney.html">Donate</a>
                             <a href="index.html#supported-projects">Supported Projects</a>
                             <a href="index.html#events">Upcoming Events</a>
                         </div>
