--- a/index.html
+++ b/index.html
@@ -792,7 +792,7 @@
                         <div class="footer-link">
                             <h2>Popular Links</h2>
                             <a href="#about">About Us</a>
-                            <a href="#donate">Donate</a>
+                            <a href="donationjourney.html">Donate</a>
                             <a href="#supported-projects">Supported Projects</a>
                             <a href="#events">Upcoming Events</a>
                         </div>
