--- a/donationjourney.html
+++ b/donationjourney.html
@@ -73,14 +73,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h2> Donation Journy</h2>
+                    <h2> Donation Journey</h2>
                 </div>
             </div>
         </div>
     </div>
     <!-- Page Header End -->
 
-        <!-- Donation Journy Start -->
+        <!-- Donation Journey Start -->
         <header>
             <h1>How To Donate</h1>
         </header>
@@ -122,8 +122,13 @@
             </div>
           </li>
         </ul>
+    <!--Donation Journey End -->
+    <!--Donate Now Button Starts-->
+    <div class="button-container">
+        <a href="https://forms.office.com/r/Y3tL8uGS4J" class="nav-item nav-link donate-button"><span style=" color: white;">DONATE NOW!!!</span></a>
+    </div>
         
-    <!--Donation Journy End -->
+    <!--Donate Now Button Ends-->
 
          <!-- Footer Start -->
          <div class="footer">
@@ -137,11 +142,10 @@
                             <p><i class="fa fa-phone-alt"></i>+27 12 382 4755</p>
                             <p><i class="fa fa-envelope"></i>msibipns@tut.ac.za</p>
                             <div class="footer-social">
-                                <a class="btn btn-custom" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-custom" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-custom" href=""><i class="fab fa-youtube"></i></a>
-                                <a class="btn btn-custom" href=""><i class="fab fa-instagram"></i></a>
-                                <a class="btn btn-custom" href=""><i class="fab fa-linkedin-in"></i></a>
+                                <a class="btn btn-custom" href="https://x.com/official_tut"><i class="fab fa-twitter"></i></a>
+                                <a class="btn btn-custom" href="https://www.facebook.com/TUTCommunications"><i class="fab fa-facebook-f"></i></a>
+                                <a class="btn btn-custom" href="https://www.youtube.com/channel/UCD4jxDpRYTarILQjtsEQv9Q?view_as=subscriber"><i class="fab fa-youtube"></i></a>
+                                <a class="btn btn-custom" href="https://www.linkedin.com/school/tshwane-university-of-technology/"><i class="fab fa-linkedin-in"></i></a>
                             </div>
                         </div>
                     </div>
