--- a/index.html
+++ b/index.html
@@ -53,13 +53,12 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">More</a>
                             <div class="dropdown-menu">
-
-                                <a href="testimonials.html" class="dropdown-item">Testimonials</a>
                                 <a href="gallery.html" class="dropdown-item">Gallery</a>
                                 <a href="#team" class="dropdown-item">Meet the team</a>
+                                <a href="#donate" class="dropdown-item">Contact Us</a>
                             </div>
                         </div>
-                        <a href="#donate" class="nav-item nav-link">Contact Us</a>
+                        <a href="donationjourney.html" class="nav-item nav-link donate-button"><span style=" color: white;">DONATE</span></a>
                     </div>
                 </div>
             </div>
@@ -80,7 +79,7 @@
                                 Our campaign aims to raise R1.2 million by securing R20,000 each from 60 companies, highlighting the power of collective effort and corporate responsibility
                             </p>
                             <div class="carousel-btn">
-                                <a class="btn btn-custom" href="donate.html">How To Donate</a>
+                                <a class="btn btn-custom" href="testimonials.html">Testimonials</a>
                                 <a class="btn btn-custom btn-play" data-toggle="modal" data-src="vid/twentyfrom20_vid1.mp4" data-target="#videoModal">Watch Video</a>
 
                             </div>
@@ -96,7 +95,7 @@
                                 <b>#TVH</b> Our three-day event, spanning three provinces, will engage 500 students in developing digital solutions with social impact, highlighting career paths in technology, entrepreneurship, and engineering while addressing real-world industry challenges
                             </p>
                             <div class="carousel-btn">
-                                <a class="btn btn-custom" href="donate.html">How To Donate</a>
+                                <a class="btn btn-custom" href="testimonials.html">Testimonials</a>
                                 <a class="btn btn-custom btn-play" data-toggle="modal" data-src="vid/AWS_eKasi_vid1.mp4" data-target="#videoModal">Watch Video</a>
                             </div>
                         </div>
@@ -112,7 +111,7 @@
                                 
                             </p>
                             <div class="carousel-btn">
-                                <a class="btn btn-custom" href="donate.html">How To Donate</a>
+                                <a class="btn btn-custom" href="testimonials.html">Testimonials</a>
                                 <a class="btn btn-custom btn-play" data-toggle="modal" data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-target="#videoModal">Watch Video</a>
                             </div>
                         </div>
@@ -127,7 +126,7 @@
                                 <b>#NDUMO</b> The TUT Environmental Education Centre in Ndumo Game Reserve educates thousands annually on conservation and sustainability, while addressing malnutrition, gender-based violence, and health issues, and supports research in nature conservation.
                             </p>
                             <div class="carousel-btn">
-                                <a class="btn btn-custom" href="donate.html">How To Donate</a>
+                                <a class="btn btn-custom" href="testimonials.html">Testimonials</a>
                                 <a class="btn btn-custom btn-play" data-toggle="modal" data-src="vid/Ndumo_Community_vid1.mp4" data-target="#videoModal">Watch Video</a>
                             </div>
                         </div>
