--- a/hackathon.html
+++ b/hackathon.html
@@ -56,10 +56,11 @@
                                 <a href="testimonials.html" class="dropdown-item">Testimonials</a>
                                 <a href="gallery.html" class="dropdown-item">Gallery</a>
                                 <a href="index.html#team" class="dropdown-item">Meet the team</a>
+                                <a href="#donate" class="dropdown-item">Contact Us</a>
                             </div>
                         </div>
-                        
-                        <a href="index.html#donate" class="nav-item nav-link">Contact Us</a>
+                        <a href="donationjourney.html" class="nav-item nav-link donate-button"><span style=" color: white;">DONATE</span></a>
+                    </div>
                     </div>
                 </div>
             </div>
