--- a/donationjourney.html
+++ b/donationjourney.html
@@ -57,10 +57,9 @@
                                 <a href="testimonials.html" class="dropdown-item">Testimonials</a>
                                 <a href="gallery.html" class="dropdown-item">Gallery</a>
                                 <a href="index.html#team" class="dropdown-item">Meet the team</a>
+                                <a href="#donate" class="dropdown-item">Contact Us</a>
                             </div>
                         </div>
-                        
-                        <a href="index.html#donate" class="nav-item nav-link">Contact Us</a>
                     </div>
                 </div>
             </div>
