--- a/grade-r-excellence.html
+++ b/grade-r-excellence.html
@@ -96,6 +96,11 @@
                 Neighbouring primary school students from Soshanguve and surrounding townships will access the centre's resources,<br>
                  facilitating holistic educational growth. <i class="fas fa-quote-right" style="font-size: 24px; font-weight: bold;"></i>
         </i></p>
+
+        <img src="img/Prof lydia.jpg" alt="hackathon-image" style="width: 30%;">
+        <p>
+            <i>Project Leader: Prof Lydia Mphahlele</i>
+        </p>
     </div>
     
     <div style="clear: both;"></div>
