--- a/hackathon.html
+++ b/hackathon.html
@@ -93,7 +93,12 @@
             but also underscores how entrepreneurship, the arts, and engineering contribute to innovative digital solutions.<br>
             It showcases the breadth of career paths within these fields and encourages students <br>
             to tackle real-life challenges posed by industry. <i class="fas fa-quote-right" style="font-size: 24px; font-weight: bold;"></i>
-        </i></p>
+        </i></p><br>
+        <img src="img/Mr Mash.jpg" alt="hackathon-image" style="width: 40%;">
+            <p>
+                <i>Project Leader: Mr Mash Phurutsi</i>
+            </p>
+
     </div>
     
     <div style="clear: both;"></div>
