--- a/ndumo-community.html
+++ b/ndumo-community.html
@@ -104,9 +104,12 @@
                     <li>Stationery for recycled teaching material</li>
                     <li>Food and sanitation packs</li>
                 </ul>
-                
-
             </p>
+            <img src="img/Dr Cheryl Ogilvie.jpg" alt="hackathon-image" style="width: 30%;">
+            <p>
+                <i>Project Leader: Dr Cheryl Ogilvie</i>
+            </p>
+
         </div>
     </div>
 </div>
