--- a/gallery.html
+++ b/gallery.html
@@ -343,7 +343,7 @@
                             <div class="card card-hover h-100">
                             <div class="card-body">
                                 <a href="index.html">
-                                    <img class="card-img-top lazy" src="img/photo-30.jpg" data-src="img/photo-30.jpg" alt="Card image cap">
+                                    <img class="card-img-top lazy" src="img/photo-30.jpeg" data-src="img/photo-30.jpeg" alt="Card image cap">
                                     <div class="reveal h-100 p-2 d-flex ">
                                         <div class="w-100 align-self-center">
                                         
