--- a/ndumo-community.html
+++ b/ndumo-community.html
@@ -78,11 +78,11 @@
     </div>
     <!-- Page Header End -->
     
-=======
+
 
     <div class="image-hackathon" style="float: left; width: 35%; margin-right: 20px;">
-        <img src="img/Technical equipment hiring (4).png" alt="hackathon-image" style="width: 80%; margin-left: 170px;">
->>>>>>> ceebfddfcbf5cb1ebb1c3018f6bef6ba79e5bd68
+        <img src="img/Yellow and Purple Modern Geometric Simple Fundraising Charity Brochure .jpg" alt="hackathon-image" style="width: 80%; margin-left: 170px; height:600px;">
+
     </div>
     <div class="hackathon-container" style="float: right; width: 60%; padding-left: 230px; margin-top: 130px;">
         <p><i>
