--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <link href="lib/flaticon/font/flaticon.css" rel="stylesheet">
         <link href="lib/animate/animate.min.css" rel="stylesheet">
         <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 
         <!-- Template Stylesheet -->
         <link href="css/style.css" rel="stylesheet">
@@ -81,7 +82,7 @@
                             </p>
                             <div class="carousel-btn">
                                 <a class="btn btn-custom" href="donate.html">How To Donate</a>
-                                <a class="btn btn-custom btn-play" data-toggle="modal" data-src="vid/twentyfrom20_vid1.mp4" data-target="#videoModal">Watch Video</a>
+                                <a class="btn btn-custom btn-play" data-toggle="modal" data-src="tvh.mp4" data-target="#videoModal">Watch Video</a>
 
                             </div>
                         </div>
@@ -97,7 +98,7 @@
                             </p>
                             <div class="carousel-btn">
                                 <a class="btn btn-custom" href="donate.html">How To Donate</a>
-                                <a class="btn btn-custom btn-play" data-toggle="modal" data-src="vid/AWS_eKasi_vid1.mp4" data-target="#videoModal">Watch Video</a>
+                                <a class="btn btn-custom btn-play" data-toggle="modal" data-src="vid/tvh.mp4" data-target="#videoModal">Watch Video</a>
                             </div>
                         </div>
                     </div>
@@ -487,8 +488,8 @@
                                 <img src="img/team-1.jpg" alt="Team Image">
                             </div>
                             <div class="team-text">
-                                <h2>Tshiamo Matiza</h2>
-                                <p>Founder & CEO</p>
+                                <h2>Mashitishi Phurutsi</h2>
+                                <p>ICEP Chief Executive Officer</p>
 
                             </div>
                         </div>
@@ -499,8 +500,8 @@
                                 <img src="img/team-2.png" alt="Team Image">
                             </div>
                             <div class="team-text">
-                                <h2>Adam Phillips</h2>
-                                <p>Chef Executive</p>
+                                <h2>Phumla Nonkululeko Msibi</h2>
+                                <p>Product Owner</p>
 
                             </div>
                         </div>
@@ -511,8 +512,8 @@
                                 <img src="img/team-3.png" alt="Team Image">
                             </div>
                             <div class="team-text">
-                                <h2>Thomas Olsen</h2>
-                                <p>Chef Advisor</p>
+                                <h2>ICEP Team</h2>
+                                <p>Scrum Master, Business Analysts, Developers, System Analyst</p>
 
                             </div>
                         </div>
@@ -523,9 +524,8 @@
                                 <img src="img/team-4.png" alt="Team Image">
                             </div>
                             <div class="team-text">
-                                <h2>James Alien</h2>
-                                <p>Advisor</p>
-
+                                <h2>Pearl Thulani Ngathi</h2>
+                                <p>Role</p>
                             </div>
                         </div>
                     </div>
