--- a/index.html
+++ b/index.html
@@ -529,6 +529,41 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="col-lg-3 col-md-6">
+                        <div class="team-item">
+                            <div class="team-img">
+                                <img src="img/team-4.png" alt="Team Image">
+                            </div>
+                            <div class="team-text">
+                                <h2>Virginia Mapula Letshekga</h2>
+                                <p>Role</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 col-md-6">
+                        <div class="team-item">
+                            <div class="team-img">
+                                <img src="img/Dr C.jpg" alt="Team Image">
+                            </div>
+                            <div class="team-text">
+                                <h2>Dr Cheryl Ogilvie</h2>
+                                <p>Ndumo Community Centre Project Leader</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="team-item">
+                            <div class="team-img">
+                                <img src="img/Prof L.jpg" alt="Team Image">
+                            </div>
+                            <div class="team-text">
+                                <h2>Prof Lydia Mphahlele</h2>
+                                <p>Grade R Centre of Excellence Project Leader</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
