--- a/gallery.html
+++ b/gallery.html
@@ -240,9 +240,9 @@
          <div class="spot-5">
             <div class="container-fluid h-100">
                 <div class="row h-100 align-items-center">
-                    <video class="background-video" autoplay loop>
+                    <video class="background-video" autoplay muted loop>
                         <source src="/vid/AWS_eKasi_vid1.mp4" type="video/mp4">
-                        Your browser does not support the video tag.
+                        Your browser does not support the video  tag.
                     </video>
                 </div>
             </div>
