--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             </p>
                             <div class="carousel-btn">
                                 <a class="btn btn-custom" href="testimonials.html">Testimonials</a>
-                                <a class="btn btn-custom btn-play" data-toggle="modal" data-src="vid/twentyfrom20_vid1.mp4" data-target="#videoModal">Watch Video</a>
+                                <a class="btn btn-custom btn-play" data-toggle="modal" data-src="123.mp4" data-target="img/123.mp4">Watch Video</a>
 
                             </div>
                         </div>
