--- a/gallery.html
+++ b/gallery.html
@@ -242,7 +242,7 @@
                 <div class="row h-100 align-items-center">
                     <video class="background-video" autoplay muted loop>
                         <source src="/vid/AWS_eKasi_vid1.mp4" type="video/mp4">
-                        Your browser does not support the video  tag.
+                        Your browser does not support the video tag.
                     </video>
                 </div>
             </div>
@@ -259,7 +259,7 @@
                             <div class="card card-hover h-100" >
                             <div class="card-body">
                                 <a href="index.html">
-                                    <img class="card-img-top lazy" src="img/photo-23.jpg" data-src="img/photo-23.jpg" alt="Card image cap">
+                                    <img class="card-img-top lazy" src="img/photo-23.png" data-src="img/photo-23.jpg" alt="Card image cap">
                                     <div class="reveal h-100 p-2 d-flex ">
                                         <div class="w-100 align-self-center">
                                        
