Changed space flyers

--- a/grade-r-excellence.html
+++ b/grade-r-excellence.html
@@ -84,7 +84,7 @@
     <div class="image-hackathon" style="float: left; width: 35%; margin-right: 20px;">
         <img src="img/Early Childhood Development Project (2).png" alt="hackathon-image" style="width: 80%; margin-left: 170px;">
     </div>
-    <div class="hackathon-container" style="float: right; width: 60%; padding-left: 230px; margin-top: 130px;">
+    <div class="hackathon-container" style="float: right; width: 60%; padding-left: 70px; margin-top: 5px;">
         <p><i>
             <i class="fas fa-quote-left" style="font-size: 40px; font-weight: bold;"></i> Our collective goal is to foster digital solutions with a social impact,<br>
             particularly within educational spheres. <br>
@@ -97,9 +97,9 @@
             to tackle real-life challenges posed by industry. <i class="fas fa-quote-right" style="font-size: 24px; font-weight: bold;"></i>
         </i></p>
 
-        <img src="img/Prof lydia.jpg" alt="hackathon-image" style="width: 40%;">
+        <img src="img/Prof lydia.jpg" alt="hackathon-image" style="width: 40%;"><br>
         <p>
-            <i>Project Leader: Prof Lydia Mphahlele</i>
+            <strong><i>Project Leader: Prof Lydia Mphahlele</i></strong>
         </p>
     </div>
     
