--- a/hackathon.html
+++ b/hackathon.html
@@ -82,7 +82,7 @@
     <div class="image-hackathon" style="float: left; width: 35%; margin-right: 20px;">
         <img src="img/Technical equipment hiring (4).png" alt="hackathon-image" style="width: 80%; margin-left: 170px;">
     </div>
-    <div class="hackathon-container" style="float: right; width: 60%; padding-left: 230px; margin-top: 130px;">
+    <div class="hackathon-container" style="float: right; width: 60%; padding-left: 70px; margin-top: 5px;">
         <p><i>
             <i class="fas fa-quote-left" style="font-size: 40px; font-weight: bold;"></i> Our collective goal is to foster digital solutions with a social impact,<br>
             particularly within educational spheres. <br>
@@ -94,9 +94,9 @@
             It showcases the breadth of career paths within these fields and encourages students <br>
             to tackle real-life challenges posed by industry. <i class="fas fa-quote-right" style="font-size: 24px; font-weight: bold;"></i>
         </i></p><br>
-        <img src="img/Mr Mash.jpg" alt="hackathon-image" style="width: 40%;">
+        <img src="img/Mr Mash.jpg" alt="hackathon-image" style="width: 40%;"><br>
             <p>
-                <i>Project Leader: Mr Mash Phurutsi</i>
+                <strong><i>Project Leader: Mr Mash Phurutsi</i></strong>
             </p>
 
     </div>
