--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="img/team-1.jpg" alt="Team Image">
+                                <img src="img/Mr Mash.jpg" alt="Team Image">
                             </div>
                             <div class="team-text">
                                 <h2>Mashitishi Phurutsi</h2>
@@ -548,7 +548,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="img/Dr C.jpg" alt="Team Image">
+                                <img src="img/team-3.png" alt="Team Image">
                             </div>
                             <div class="team-text">
                                 <h2>Dr Cheryl Ogilvie</h2>
@@ -559,7 +559,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="img/Prof L.jpg" alt="Team Image">
+                                <img src="img/team-3.png" alt="Team Image">
                             </div>
                             <div class="team-text">
                                 <h2>Prof Lydia Mphahlele</h2>
