--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <a href="#supported-projects" class="nav-item nav-link">Supported Projects</a>
                         <a href="#events" class="nav-item nav-link">Events</a>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">More</a>
+                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" style="padding-right: 45px;">More</a>
                             <div class="dropdown-menu">
                                 <a href="gallery.html" class="dropdown-item">Gallery</a>
                                 <a href="#team" class="dropdown-item">Meet the team</a>
