--- a/ndumo-community.html
+++ b/ndumo-community.html
@@ -79,31 +79,26 @@
     <!-- Page Header End -->
     
 
-
     <div class="image-hackathon" style="float: left; width: 35%; margin-right: 20px;">
-<<<<<<< HEAD
-        <img src="img/Yellow and Purple Modern Geometric Simple Fundraising Charity Brochure .jpg" alt="hackathon-image" style="width: 80%; margin-left: 170px;">
-=======
-        <img src="img/Yellow and Purple Modern Geometric Simple Fundraising Charity Brochure .jpg" alt="hackathon-image" style="width: 80%; margin-left: 170px; height:600px;">
->>>>>>> cb51e4e2aca574cb53196bd1aa7320ba3d57af08
-
+        <img src="img/Our.png" alt="hackathon-image" style="width: 80%; margin-left: 170px;">
     </div>
     <div class="hackathon-container" style="float: right; width: 60%; padding-left: 70px; margin-top: 5px;">
         <p><i>
-            <i class="fas fa-quote-left" style="font-size: 40px; font-weight: bold;"></i> 
+            <i class="fas fa-quote-left" style="font-size: 40px; font-weight: bold;"></i>
             Join us in empowering the next generation for a sustainable future.<br>
-             The TUT Environmental Education Centre, nestled in the heart of the Ndumo Game Reserve in KZN, <br>
-             educates over 10,000 learners annually on nature conservation, water sustainability, and environmental stewardship.<br>
-              Beyond education, our programme addresses critical issues such as malnutrition by providing meals to learners,<br>
+             The TUT Environmental Education Centre, nestled in the heart of the Ndumo Game Reserve in KZN,<br>
+              educates over 10,000 learners annually on nature conservation, water sustainability, and environmental stewardship.<br>
+               Beyond education, our programme addresses critical issues such as malnutrition by providing meals to learners, <br>
                and it actively works to alleviate gender-based violence and poor health, which are barriers to learning.<br>
                 Your support can help us continue this vital work, ensuring that every child not only learns but thrives.<br>
-                 Together, we can make a difference.
-          <i class="fas fa-quote-right" style="font-size: 24px; font-weight: bold;"></i>
-        </i></p>
-        <img src="img/Dr Cheryl Ogilvie.jpg" alt="hackathon-image" style="width: 30%;"><br>
+                Together, we can make a difference.
+             <i class="fas fa-quote-right" style="font-size: 24px; font-weight: bold;"></i>
+        </i></p><br>
+        <img src="img/Dr Cheryl Ogilvie.jpg" alt="hackathon-image" style="width: 40%;"><br>
             <p>
                 <strong><i>Project Leader: Dr Cheryl Ogilvie</i></strong>
             </p>
+
     </div>
     
     <div style="clear: both;"></div>
