--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
         <!-- Nav Bar Start -->
         <div class="navbar navbar-expand-lg bg-light navbar-light">
             <div class="container-fluid">
-                <img src="img/Picture1.png" class="navbar-brand">
+                <a href="index.html" class="navbar-brand">
+                    <img src="img/Picture1.png" alt="Brand Logo" class="navbar-logo">
+                </a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <div class="burger-menu">
                         <span class="navbar-toggler-icon"></span>
