--- a/index.html
+++ b/index.html
@@ -486,8 +486,8 @@
                     <p>Meet The Team</p>
                     <h2>Founders</h2>
                 </div>
-                <div class="row">
-                    <div class="col-lg-3 col-md-6">
+                <div class="row ">
+                    <div class="col-lg-3 col-md-6 ">
                         <div class="team-item">
                             <div class="team-img">
                                 <img src="img/Mr Mash.jpg" alt="Team Image">
@@ -536,7 +536,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-3 col-md-6">
+                    <div class="col-lg-3 col-md-6 mx-auto">
                         <div class="team-item">
                             <div class="team-img">
                                 <img src="img/team-3.png" alt="Team Image">
@@ -547,7 +547,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6">
+                    <div class="col-lg-3 col-md-6 mx-auto">
                         <div class="team-item">
                             <div class="team-img">
                                 <img src="img/team-3.png" alt="Team Image">
@@ -558,21 +558,49 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="team-item">
-                            <div class="team-img">
-                                <img src="img/Apane.jpeg" alt="Team Image">
-                            </div>
-                            <div class="team-text">
-                                <h2>Inocent Apane</h2>
-                                <p><b>Project Manager</b> (BA)</p>
-                            </div>
-                        </div>
-                    </div>
+                   
                 </div>
             </div>
         </div>
     </section>  
+        <!-- Team End -->
+
+
+         <!-- Team Start -->
+         <section id="team" style="padding-top: 100px; margin-top: -50px;">         
+            <div class="team">
+                <div class="container">
+                    <div class="section-header text-center">                   
+                        <h2>Scrum Leaders</h2>
+                    </div>
+                    <div class="row justify-content-center">
+                        <div class="col-lg-3 col-md-6 ">
+                            <div class="team-item">
+                                <div class="team-img">
+                                    <img src="img/Apane.jpeg" alt="Team Image">
+                                </div>
+                                <div class="team-text">
+                                    <h2>Inocent Apane</h2>
+                                    <p><b>Project Manager</b> (BA)</p>
+                                </div>
+                            </div>
+                        </div>     
+                        <div class="col-lg-3 col-md-6 ">
+                            <div class="team-item">
+                                <div class="team-img">
+                                    <img src="img/Micheal.jpeg" alt="Team Image">
+                                </div>
+                                <div class="team-text">
+                                    <h2>Micheal Sibanda</h2>
+                                    <p><b>Scrum Master</b> (BA)</p>
+                                </div>
+                            </div>
+                        </div>        
+                    </div>
+                </div>
+            </div>
+        </section>
+        
         <!-- Team End -->
 
                 <!-- Team Start -->
@@ -646,20 +674,7 @@
                 <div class="section-header text-center">                    
                     <h2>Business Analyst</h2>       
                 </div>
-                <div class="row">
-
-                    <div class="col-lg-3 col-md-6">
-                        <div class="team-item">
-                            <div class="team-img">
-                                <img src="img/Micheal.jpeg" alt="Team Image">
-                            </div>
-                            <div class="team-text">
-                                <h2>Micheal Sibanda</h2>
-                                <p><b>Scrum Master</b> (BA)</p>
-
-                            </div>
-                        </div>
-                    </div>
+                <div class="row">                    
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
@@ -706,7 +721,7 @@
                             </div>
                         </div>
                     </div>      
-                    <div class="col-lg-3 col-md-6">
+                    <div class="col-lg-3 col-md-6 mx-auto">
                         <div class="team-item">
                             <div class="team-img">
                                 <img src="img/Mohau.jpeg" alt="Team Image">
