--- a/index.html
+++ b/index.html
@@ -77,7 +77,6 @@
                             <img src="img/carousel-1.jpg" alt="Image">
                         </div>
                         <div class="carousel-text">
-                            <h1>#Twentyfrom20</h1>
                             <p>
                                 Our campaign aims to raise R1.2 million by securing R20,000 each from 60 companies, highlighting the power of collective effort and corporate responsibility
                             </p>
@@ -95,9 +94,9 @@
                             <img src="img/carousel-2.jpg" alt="Image">
                         </div>
                         <div class="carousel-text">
-                            <h1>Tshwane Varsity Hackathon</h1>
+                            <h1>Intervarsity Hackathon Series</h1>
                             <p>
-                                <b>#TVH</b> Our three-day event, spanning three provinces, will engage 500 students in developing digital solutions with social impact, highlighting career paths in technology, entrepreneurship, and engineering while addressing real-world industry challenges
+                                Our three-day event, spanning three provinces, will engage 500 students in developing digital solutions with social impact, highlighting career paths in technology, entrepreneurship, and engineering while addressing real-world industry challenges
                             </p>
                             <div class="carousel-btn">
 
@@ -114,7 +113,7 @@
                         <div class="carousel-text">
                             <h1>Grade R Centre of Excellence</h1>
                             <p>
-                                <b>#GRADE R</b> The TUT Grade R Centre for Excellence will enhance Early Childhood Development for about 100,000 learners and 1,000 practitioners through creative and innovative resources, including classrooms, a robotics centre, and art rooms, serving surrounding townships and primary schools.
+                                 The TUT Grade R Centre for Excellence will enhance Early Childhood Development for about 100,000 learners and 1,000 practitioners through creative and innovative resources, including classrooms, a robotics centre, and art rooms, serving surrounding townships and primary schools.
                                 
                             </p>
                             <div class="carousel-btn">
@@ -130,7 +129,7 @@
                         <div class="carousel-text">
                             <h1>Ndumo Community Project</h1>
                             <p>
-                                <b>#NDUMO</b> The TUT Environmental Education Centre in Ndumo Game Reserve educates thousands annually on conservation and sustainability, while addressing malnutrition, gender-based violence, and health issues, and supports research in nature conservation.
+                                 The TUT Environmental Education Centre in Ndumo Game Reserve educates thousands annually on conservation and sustainability, while addressing malnutrition, gender-based violence, and health issues, and supports research in nature conservation.
                             </p>
                             <div class="carousel-btn">
                                 <a class="btn btn-custom" href="testimonials.html">Testimonials</a>
