--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                         <div class="causes-text">
                             <h3>Grade R Centre of Excellence</h3>
                             <p>
-                                <b>Building Bright Futures:</b> Invest in helping us create a quality early childhood development learning experience for those who need it the most. Join Us  in Shaping the Next Generation Through Quality Education at the Grade R Centre of Excellence!
+                                <b>Building Bright Futures:</b> Invest in helping us create a quality early childhood development learning experience for those who need it the most. Join Us  in S haping the Next Generation Through Quality Education at the Grade R Centre of Excellence!
                             </p>
                         </div>
                         <div class="causes-btn">
@@ -378,7 +378,7 @@
                             </div>
                         </div>
                         <div class="causes-text">
-                            <h3>Tshwane Varsity Hackathon</h3>
+                            <h3>Intervarsity Hackathon Series</h3>
                             <p>
                                 <b>Innovate, Collaborate, Elevate:</b> Be Part of the Future through the Intervarsity Hackathon Series. Join Forces with us to Drive Technological Breakthroughs and Shape Tomorrow's Solutions while creating graduates who are future ready!
                             </p>
@@ -389,7 +389,7 @@
                     </div>
                     <div class="causes-item">
                         <div class="causes-img">
-                            <img src="img/ndumologo.jpg" alt="image" height="250">
+                            <img src="img/photo-56.png" alt="image" height="220">
                             
                             <!--img src="img/ndumologo.jpg" alt="Image"-->
                         </div>
@@ -443,7 +443,7 @@
                                          Pretoria west Campus)</p>
                                 </div>
                                 <div class="event-text">
-                                    <h3>Tshwane Varsity Hackathon</h3>
+                                    <h3>Intervarsity Hackathon Series</h3>
                                     <p>
                                         Join us for the Tshwane Varsity Hackathon that will run for 3 days at our Pretoria West Campus. Don’t miss out on 53 hours of innovation and collaboration!
                                     </p>
